# password_manager

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
core/: base_models.py
core/migrations/: 0001_initial.py  0002_vault.py  0003_alter_vault_created_by.py  0004_vaulttype_vault_vault_type.py  0005_alter_vaulttype_keys.py  0006_alter_vaulttype_keys.py  0007_alter_organization_name_alter_user_email.py
core/models/: __init__.py  organization.py  team.py  user.py  vault.py
deployment/: Dockerfile  docker-compose.yml  entrypoint.sh
password_manager_latest/: asgi.py  settings.py  urls.py  wsgi.py
rest/: tests.py  urls.py
rest/organization/: admin.py  apps.py
rest/user/: admin.py  apps.py  serializers.py  tests.py  urls.py  views.py
rest/vault/: admin.py  apps.py  serializers.py  urls.py  views.py
utils/: authentication.py  custom_exception.py  exceptions.py  middleware.py  rsa.py  user_utils.py
